# rust_ray

./: Cargo.toml  random_scene_move.yaml
src/: lib.rs  main.rs
src/math/: methods.rs  ray.rs  vec3.rs
src/world/: camera.rs  mod.rs  moving_sphere_object.rs  renderer.rs  some_object.rs
src/world/loaders/: camera_loader.rs  rnd_gen.rs  scene_loader.rs
src/world/materials/: dielectric_mat.rs  diffuse_mat.rs  glow_mat.rs  metal_mat.rs  some_material.rs
tests/: math_methods_tests.rs  math_ray_tests.rs  voxel_grid_tests.rs
