[package]
authors = ["Evgeniy A. Cymbalyuk <cimbaluk@gmail.com>"]
edition = "2018"
name = "rust_ray"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num-traits = "0.2"
rand = "0.7.3"

# utils
num_cpus = "1.13.0"

[dependencies.linked-hash-map]
features = ["serde_impl"]
version = "0.5.3"

[dependencies.serde]
features = ["derive"]
version = "1.0.117"

[dependencies.serde_yaml]
version = "0.8.14"

[lib]

[[example]]
name = "hello_ppm"

[[example]]
name = "hello_bmp"
