[package]
authors = ["Evgeniy A. Cymbalyuk <cimbaluk@gmail.com>"]
edition = "2018"
name = "rust_ray"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5.8"
lazy_static = "1.4.0"
num-traits = "0.2"
num_cpus = "1.13.0"
rand = "0.7.3"
serde_yaml = "0.8.14"

[dependencies.linked-hash-map]
features = ["serde_impl"]
version = "0.5.3"

[dependencies.serde]
features = ["derive"]
version = "1.0.117"

[dependencies.derive_more]
default-features = false
features = ["from"]
version = "0.99.11"

[lib]

[[example]]
name = "hello_ppm"

[[example]]
name = "hello_bmp"
